# geos-chem

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README.md.old  azure-pipeline.yml  azure-pipelines.yml
.ci/: build-matrix.yml  quick-build.yml  release.dockerfile  release.yml
CMakeScripts/: GC-DefaultCompilerOptions.cmake  gc_compiler_options.cmake  gc_targets.cmake  gc_util.cmake
GeosCore/: CMakeLists.txt  drydep_mod.F90  input_mod.F90  transport_mod.F
GeosRad/: CMakeLists.txt
GeosUtil/: CMakeLists.txt
GeosUtil2/: CMakeLists.txt
HEMCO/: CMakeLists.txt
HEMCO/Core/: CMakeLists.txt  hco_interp_mod.F90
HEMCO/Extensions/: CMakeLists.txt
HEMCO/Interfaces/: CMakeLists.txt
Headers/: CMakeLists.txt  species_database_mod.F90  state_chm_mod.F90  state_met_mod.F90
History/: CMakeLists.txt
ISOROPIA/: CMakeLists.txt
Interfaces/GCHP/: Chem_GridCompMod.F90  Includes_Before_Run.H
Interfaces/GCHP/Registry/: Chem_Registry.rc
KPP/Standard/: CMakeLists.txt
NcdfUtil/: CMakeLists.txt
RunDirSetup/: CMakeLists.txt  CopyRunDirs.template
boilerplate/: executable.cmake  root.cmake  shared_library.cmake
